--- a/Week1.html
+++ b/Week1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Week1</title>
+    <title>Week1-S1</title>
     <meta name="author" content="Your name" />
     <meta name="keywords" content="blog, kitchen" />
 
