Commit file Week1 - Change the author name

--- a/Week1.html
+++ b/Week1.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Week1-S1</title>
-    <meta name="author" content="Your name" />
+    <meta name="author" content="Andrei Dascal" />
     <meta name="keywords" content="blog, kitchen" />
 
     <link rel="shortcut icon" href="img2.jpg" type="image/x-icon">
