change Week1 file

--- a/Week1.html
+++ b/Week1.html
@@ -3,8 +3,8 @@
 
 <head>
     <title>Week1-S1</title>
-    <meta name="author" content="Andrei Dascal 1" />
-    <meta name="keywords" content="blog, kitchen" />
+    <meta name="author" content="Andrei Dascal" />
+    <meta name="keywords" content="week1" />
 
     <link rel="shortcut icon" href="img2.jpg" type="image/x-icon">
     <link rel="stylesheet" href="Week1.css">
