--- a/Week3.html
+++ b/Week3.html
@@ -3,7 +3,10 @@
 
 <head>
     <title>Week3</title>
+    
     <meta name="author" content="Andrei Dascal" />
+    
+    <link rel="stylesheet" href="Global.css"/>
 
     <style>
         * {
