Week6 - structure on folder

--- a/Homework/Homework1.html
+++ b/Homework/Homework1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Week5</title>
+    <title>What we've learned?</title>
     <meta name="author" content="Andrei Dascal" />
     <meta name="keywords" content="" />
 
