--- a/Week1/Week1.html
+++ b/Week1/Week1.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Andrei Dascal" />
     <meta name="keywords" content="week1" />
 
-    <link rel="shortcut icon" href="img2.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../Images/img2.jpg" type="image/x-icon">
     <link rel="stylesheet" href="Week1.css">
 
     <script src="my-js-file.js"></script>
